bug: in contact - correct flex not wrapping in ie

--- a/src/app/main/contact/contact.component.sass
+++ b/src/app/main/contact/contact.component.sass
@@ -1,10 +1,9 @@
 .contact
 
   .contactdata
-    display: block
-    max-width: 80%
-    margin: 10px auto
+    display: flex
     text-align: center
+    padding: 0 10px
 
     ul
       margin: 0
